@@ -3,6 +3,8 @@ IndentWidth: 4
 ColumnLimit: '80'
 NamespaceIndentation: All
 AccessModifierOffset: -4
+ConstructorInitializerIndentWidth: 4
+ContinuationIndentWidth: 4
 AlignAfterOpenBracket: 'AlwaysBreak'
 BinPackArguments: 'false'
 BinPackParameters: 'false'
@@ -33,8 +35,6 @@ BreakBeforeConceptDeclarations: Always
 BreakBeforeBinaryOperators: NonAssignment
 CompactNamespaces: false
 BreakStringLiterals: true
-ConstructorInitializerIndentWidth: 4
-ContinuationIndentWidth: 4
 Cpp11BracedListStyle: false
 EmptyLineBeforeAccessModifier: Always
 FixNamespaceComments: true
@@ -44,6 +44,8 @@ ReflowComments: true
 RequiresClausePosition: OwnLine
 SeparateDefinitionBlocks: Always
 PackConstructorInitializers: NextLine #NextLineOnly is better
+BreakConstructorInitializers: BeforeComma
+BreakInheritanceList: BeforeComma
 BreakBeforeBraces: Custom
 BraceWrapping:
   AfterClass:      true
@@ -57,6 +59,8 @@ BraceWrapping:
   AfterExternBlock: true
   BeforeCatch:     true
   BeforeElse:      true
+  BeforeLambdaBody: true
+  BeforeWhile: false
   IndentBraces:    false
   SplitEmptyFunction: true
   SplitEmptyRecord: true
@@ -68,3 +72,4 @@ BraceWrapping:
 # QualifierOrder: ['inline', 'static', 'constexpr', 'volatile', 'const', 'type', ]
 # RequiresExpressionIndentation: OuterScope
 # NextLineOnly for PackConstructorInitializers
+# BreakAfterAttributes: Always
