@@ -2,10 +2,12 @@
 
 int main(int, char* [])
 {
-	dgm::Window window({ 1920, 1080 }, "Sandbox", false);
+	dgm::Window window({ 1280,720 }, "Sandbox", false);
 	sf::Event event;
 	dgm::Time time;
 
+	auto&& cam = dgm::Camera{ { 0.f, 0.f, 1.f, 1.f }, sf::Vector2f{ window.getSize()} };
+	cam.setPosition({ 0.f, 0.f });
 	dgm::VisionCone cone(100.f, 50.f);
 	dgm::Circle circle(0.f, 0.f, 20.f);
 	cone.setPosition(100.f, 100.f);
@@ -16,12 +18,24 @@ int main(int, char* [])
 		while (window.pollEvent(event))
 		{
 			if (event.type == sf::Event::Closed) window.close();
+			else if (event.type == sf::Event::KeyPressed)
+			{
+				if (event.key.code == sf::Keyboard::Z)
+				{
+					cam.setZoom(0.5f);
+				}
+				else if (event.key.code == sf::Keyboard::Y)
+				{
+					cam.setZoom(1.f);
+				}
+			}
 		}
 
 		// Logic
 		time.reset();
 
 		// Draw
+		window.getWindowContext().setView(cam.getCurrentView());
 		window.beginDraw();
 
 		circle.debugRender(window, sf::Color::Red);
